Agentforce/force-app/main/default/objects/Contract__c/fields/Rolling_Contract__c.field-meta.xml
<CustomField>
    <fullName>Rolling_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AD-737 to create a &apos;re-bid&apos; Opportunity prior to the end of the &apos;Contract End Date&apos;</description>
    <label>Rolling Contract</label>
    <type>Checkbox</type>
</CustomField>