Agentforce/force-app/main/default/objects/Contract__c/fields/SAP_Document__c.field-meta.xml
<CustomField>
    <fullName>SAP_Document__c</fullName>
    <label>SAP Document</label>
    <length>255</length>
    <type>Text</type>
</CustomField>