Agentforce/force-app/main/default/objects/Contract__c/fields/Search_Text__c.field-meta.xml
<CustomField>
    <fullName>Search_Text__c</fullName>
    <label>Search Text</label>
    <type>TextArea</type>
</CustomField>