Agentforce/force-app/main/default/objects/Contract__c/fields/Service_Summary__c.field-meta.xml
<CustomField>
    <fullName>Service_Summary__c</fullName>
    <description>AD-171 - Add Service Family summary of Contract Line Items</description>
    <label>Service Summary</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Service_Family</valueSetName>
    </valueSet>
</CustomField>