Agentforce/force-app/main/default/objects/Contract__c/fields/Standard_Terms__c.field-meta.xml
<CustomField>
    <fullName>Standard_Terms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Standard Terms</label>
    <type>Checkbox</type>
</CustomField>