Agentforce/force-app/main/default/objects/Contract__c/fields/Subject_to_Price_Increases__c.field-meta.xml
<CustomField>
    <fullName>Subject_to_Price_Increases__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subject to Price Increases</label>
    <type>Checkbox</type>
</CustomField>