Agentforce/force-app/main/default/objects/Contract__c/fields/System_Currency_Mis_Match__c.field-meta.xml
<CustomField>
    <fullName>System_Currency_Mis_Match__c</fullName>
    <description>Null when currencies aligned, owner and/or account where not</description>
    <formula>/* Using 1 if owner is mismatched and 2 if Account is mismatched we are able to get 3 options - 0,1,2,3 by adding the results and using Case to determine outcome
Further checks can be made, but care must be taken to ensure combinations result in unique values */

CASE (
(
(
IF ( Text(CurrencyIsoCode) !=  Owner:User.System_User_Currency__c, 1, 0)
)
+
(
IF (Text(CurrencyIsoCode) != TEXT(Account__r.CurrencyIsoCode), 2, 0)
)
),

0, NULL,
1, &quot;Owner Currency Mis-Match&quot;,
2, &quot;Account Currency Mis-Match&quot;,
3, &quot;Owner and Account Currency Mis-Match&quot;,NULL
)</formula>
    <label>System: Currency Mis-Match</label>
    <type>Text</type>
</CustomField>