Agentforce/force-app/main/default/objects/Contract__c/fields/System_Days_Contract_End_Renewal_Start__c.field-meta.xml
<CustomField>
    <fullName>System_Days_Contract_End_Renewal_Start__c</fullName>
    <formula>Renewal_Opportunity_Contract_Start__c -  Contract_End_Date__c</formula>
    <label># Days Contract End to Renewal Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>