Agentforce/force-app/main/default/objects/Contract__c/fields/System_Misaligned_Owner_Fields__c.field-meta.xml
<CustomField>
    <fullName>System_Misaligned_Owner_Fields__c</fullName>
    <description>Ticked when an Contract&apos;s Ownership fields are misaligned. Used as trigger for Scheduled Flow.</description>
    <formula>OR(
TEXT(Corporate_Type__c) != TEXT(Owner:User.Corporate_Type__c),
TEXT(Contract_Region__c) != TEXT(Owner:User.Region__c),
TEXT(Business_Unit__c) != TEXT(Owner:User.Business_Unit__c),
Owner_Country__c != Owner:User.Country,
TEXT(Owner_Team__c) != TEXT(Owner:User.Team__c),
Creator_Country__c != CreatedBy.Country
)</formula>
    <inlineHelpText>System field.</inlineHelpText>
    <label>System: Misaligned Owner Fields</label>
    <type>Checkbox</type>
</CustomField>