Agentforce/force-app/main/default/objects/Contract__c/fields/T_Cs_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>T_Cs_Signed_Date__c</fullName>
    <description>AD-754 to record the signed Terms &amp; Conditions date when the Contract is Live, In Negotiation or Terminated</description>
    <label>T&amp;Cs Signed Date</label>
    <type>Date</type>
</CustomField>