Agentforce/force-app/main/default/objects/Contract__c/fields/Teams_URL__c.field-meta.xml
<CustomField>
    <fullName>Teams_URL__c</fullName>
    <label>Teams URL</label>
    <type>Url</type>
</CustomField>