Agentforce/force-app/main/default/objects/Contract__c/fields/Tender_Risk_Comment__c.field-meta.xml
<CustomField>
    <fullName>Tender_Risk_Comment__c</fullName>
    <label>Tender Risk Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>