Agentforce/force-app/main/default/objects/Contract__c/fields/Tender_Risk_Probability__c.field-meta.xml
<CustomField>
    <fullName>Tender_Risk_Probability__c</fullName>
    <description>AD-850 to capture the likelihood of the delivery against tender risk occurring</description>
    <label>Tender Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Risk_Likelihood</valueSetName>
    </valueSet>
</CustomField>