Agentforce/force-app/main/default/objects/Contract__c/fields/Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Termination_Date__c</fullName>
    <description>AD-402 the ability to terminate a Contract</description>
    <label>Termination Date</label>
    <type>Date</type>
</CustomField>