Agentforce/force-app/main/default/objects/Contract__c/fields/Termination_Notice_Received__c.field-meta.xml
<CustomField>
    <fullName>Termination_Notice_Received__c</fullName>
    <label>Termination Notice Received</label>
    <type>Date</type>
</CustomField>