Agentforce/force-app/main/default/objects/Contract__c/fields/Termination_Period__c.field-meta.xml
<CustomField>
    <fullName>Termination_Period__c</fullName>
    <label>Termination Period (Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>