Agentforce/force-app/main/default/objects/Contract__c/fields/Top_40__c.field-meta.xml
<CustomField>
    <fullName>Top_40__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Top 40</label>
    <type>Checkbox</type>
</CustomField>