Agentforce/force-app/main/default/objects/Contract__c/fields/Total_Contract_Risk__c.field-meta.xml
<CustomField>
    <fullName>Total_Contract_Risk__c</fullName>
    <description>AD-851 to understand the overall contract risk rating</description>
    <formula>Contract_End_Risk_Score__c  +  Financial_Risk_Score__c  +  HS_Risk_Score__c   +  Operational_Risk_Score__c  +  People_Risk_Score__c  +  Relationship_Risk_Score__c +  Tender_Risk_Score__c +  Delivery_Against_Tender_Risk_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Contract Risk</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>