Agentforce/force-app/main/default/objects/Contract__c/fields/Total_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Contract_Value__c</fullName>
    <description>AD-54 - field used to capture the total value of all the contract line item values</description>
    <label>Total Contract Value</label>
    <summarizedField>Contract_Line_Item__c.Value__c</summarizedField>
    <summaryFilterItems>
        <field>Contract_Line_Item__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Terminated</value>
    </summaryFilterItems>
    <summaryForeignKey>Contract_Line_Item__c.Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>