Agentforce/force-app/main/default/objects/Contract__c/fields/Total_Risk_Level_Comment__c.field-meta.xml
<CustomField>
    <fullName>Total_Risk_Level_Comment__c</fullName>
    <label>Total Risk Level Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>