Agentforce/force-app/main/default/objects/Contract__c/fields/Total_Variation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Variation_Amount__c</fullName>
    <label>Total Variation Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>