Agentforce/force-app/main/default/objects/Contract__c/fields/TUPE__c.field-meta.xml
<CustomField>
    <fullName>TUPE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TUPE</label>
    <type>Checkbox</type>
</CustomField>