Agentforce/force-app/main/default/objects/Contract__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Framework Agreement</fullName>
            </value>
            <value>
                <fullName>Franchise member</fullName>
            </value>
            <value>
                <fullName>Manual billing</fullName>
            </value>
            <value>
                <fullName>Master Service Agreement</fullName>
            </value>
            <value>
                <fullName>Multi-Site Contract</fullName>
            </value>
            <value>
                <fullName>Single-Site Contract</fullName>
            </value>
            <value>
                <fullName>Variable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>