Agentforce/force-app/main/default/objects/Contract__c/fields/Unlocatable__c.field-meta.xml
<CustomField>
    <fullName>Unlocatable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unlocatable</label>
    <type>Checkbox</type>
</CustomField>