Agentforce/force-app/main/default/objects/Contract__c/fields/Value_of_Competitor_Services__c.field-meta.xml
<CustomField>
    <fullName>Value_of_Competitor_Services__c</fullName>
    <label>Value of Competitor Services</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>