Agentforce/force-app/main/default/objects/Contract__c/validationRules/Contract_End_Date_must_be_after_Contract.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_End_Date_must_be_after_Contract</fullName>
    <active>true</active>
    <description>AD-757 Contract End Date must be after Contract Start Date</description>
    <errorConditionFormula>AND(!$Setup.OCS_Config_Settings_CSH__c.Validation_Rules_Disabled__c,Contract_End_Date__c &lt; Contract_Start_Date__c)</errorConditionFormula>
    <errorDisplayField>Contract_End_Date__c</errorDisplayField>
    <errorMessage>Contract End Date must be after Contract Start Date</errorMessage>
</ValidationRule>