Agentforce/force-app/main/default/objects/Contract__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contract_Name__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Contract_Start_Date__c</columns>
    <columns>Contract_End_Date__c</columns>
    <columns>No_of_Contract_Lines__c</columns>
    <columns>Contracted_Services__c</columns>
    <columns>Active_Annual_Revenue__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Contract</label>
</ListView>