Agentforce/force-app/main/default/objects/Contract__c/listViews/At_Risk_Contract.listView-meta.xml
<ListView>
    <fullName>At_Risk_Contract</fullName>
    <columns>NAME</columns>
    <columns>Contract_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Contract_Start_Date__c</columns>
    <columns>Contract_End_Date__c</columns>
    <columns>Contract_Last_Renewed__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>Owner_Country__c</columns>
    <columns>Owner_Full_Name__c</columns>
    <columns>Contracted_Services__c</columns>
    <columns>Active_Annual_Revenue__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>At Risk</value>
    </filters>
    <filters>
        <field>Owner_Country__c</field>
        <operation>equals</operation>
        <value>Thailand</value>
    </filters>
    <label>At Risk Contract</label>
</ListView>