Agentforce/force-app/main/default/objects/Contract__c/listViews/Cleaning_Rail.listView-meta.xml
<ListView>
    <fullName>Cleaning_Rail</fullName>
    <columns>NAME</columns>
    <columns>Owner_Full_Name__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Contract_Name__c</columns>
    <columns>Reference__c</columns>
    <columns>PVS_Sector__c</columns>
    <columns>Contract_End_Date__c</columns>
    <columns>Active_Annual_Revenue__c</columns>
    <columns>Actual_GM_Percentage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Owner_Business_Unit__c</field>
        <operation>equals</operation>
        <value>Cleaning</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Terminated</value>
    </filters>
    <filters>
        <field>PVS_Sector__c</field>
        <operation>equals</operation>
        <value>Rail</value>
    </filters>
    <label>Cleaning - Rail</label>
    <sharedTo>
        <group>Facilities_BU_Cleaning</group>
    </sharedTo>
</ListView>