Agentforce/force-app/main/default/objects/Contract__c/listViews/Contract_End_vs_Renewal_Opp_Start.listView-meta.xml
<ListView>
    <fullName>Contract_End_vs_Renewal_Opp_Start</fullName>
    <booleanFilter>1 AND 3 AND (2 OR 4) AND 5 AND 6</booleanFilter>
    <columns>NAME</columns>
    <columns>Contract_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Contract_End_Date__c</columns>
    <columns>Renewal_Opportunity_Contract_Start__c</columns>
    <columns>System_Days_Contract_End_Renewal_Start__c</columns>
    <columns>Rebid_Opportunity__c</columns>
    <columns>Renewal_Opportunity_Type__c</columns>
    <columns>Active_Annual_Revenue__c</columns>
    <columns>Active_Annual_Gross_Margin__c</columns>
    <columns>Contract_Start_Date__c</columns>
    <columns>Contracted_Services__c</columns>
    <columns>No_of_Contract_Lines__c</columns>
    <columns>Owner_Country__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>System_Days_Contract_End_Renewal_Start__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Owner_Country__c</field>
        <operation>equals</operation>
        <value>United Kingdom</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Terminated</value>
    </filters>
    <filters>
        <field>Owner_Country__c</field>
        <operation>equals</operation>
        <value>Ireland</value>
    </filters>
    <filters>
        <field>System_Days_Contract_End_Renewal_Start__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>System_Days_Contract_End_Renewal_Start__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <label>Contract End vs Renewal Opp Start</label>
    <sharedTo>
        <role>OCS_Group_System_Administrator</role>
    </sharedTo>
</ListView>